# pyclapeyron

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  tox.ini
.github/workflows/: CI.yml  release.yml
pyclapeyron/: __init__.py  clapeyron_import.py  juliapkg.json  utils.py
pyclapeyron/tests/: README.md  build_test.py  test_database.py  test_estimation.py  test_init.py  test_issues.py  test_methods.py  test_methods_api.py  test_methods_api_flash.py  test_methods_electrolytes.py  test_methods_eos.py  test_methods_eos_pcsaft.py  test_misc.py  test_models.py  test_models_cubic.py  test_models_electrolytes.py  test_models_others.py  test_models_saft_others.py  test_models_saft_pc.py  test_models_saft_vr.py
