[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyclapeyron"
version = "0.1.1"
description = "Python bindings for the Julia package Clapeyron.jl"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "juliacall>=0.9",
    "numpy>=2",
]
authors = [
  { name = "Sebastian Schmitt", email = "se.s.schmitt@gmail.com" },
  { name = "Hon Wa Yew", email = "yewhonwa@gmail.com" },
  { name = "Pierre Walker", email = "pjwalker@caltech.edu" },
  { name = "Andrés Riedemann", email = "andres.riedemann@gmail.com" },
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pyclapeyron*"]

[tool.setuptools.package-data]
pyclapeyron = ["juliapkg.json"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)s] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
